// 우리가 유저에게 어떠한 형태로 알림을 보냈는데
// 어떠한 형태로 보낼 거다 라고 구조를 만들어줘야 한다.

syntax = "proto3";

package gameNotification;

// 위치 정보 메시지 구조
message LocationUpdate {
  // repeated 는 여러 번 반복해서 쓰겠다. 배열로 보내겠다라는 뜻
  repeated UserLocation users = 1;

  message UserLocation {
    string id = 1;  // 유저 id
    uint32 playerId = 2;
    float x = 3;    // 유저의 x 좌표
    float y = 4;    // 유저의 y 좌표
  }
}