syntax = "proto3";

package game;

// 위치 정보 업데이트
// 지금 내가 어떤 게임에 있는지와 나의 위치를 보낸다.
message LocationUpdatePayload {
  float x = 1;  // 유저의 x 위치 
  float y = 2;  // 유저의 y 위치 
}